--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.icon_test">
+    package="com.example.iconsax_preview">
    <application
-        android:label="icon_test"
+        android:label="iconsax_preview"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
